fix: use object-fit contain on mobile project overview

--- a/css/custom.css
+++ b/css/custom.css
@@ -353,6 +353,7 @@ body.is-transitioning * {
     height: 100%;
     max-width: none;
     max-height: none;
+    object-fit: contain;
   }
 }
 
